# Code-For-Purpose

./: .env.example  DEPLOYMENT.md  Dockerfile.next  FIXES_APPLIED.md  QUICKSTART.md  QUOTA_FIX.md  README.md  SETUP.md  docker-compose.yml  next.config.mjs  run-local.sh  test_demo_mode.py  test_simple_upload.py  test_upload.py  tsconfig.tsbuildinfo  vercel.json
api/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
api/models/: schemas.py
api/services/: ai_service.py  ai_service_v2.py  ai_utils.py  data_service.py  visualization_service.py
app/: globals.css
app/(main)/: layout.tsx  page.tsx
app/(main)/analytics/: page.tsx
app/(main)/settings/: page.tsx
app/(main)/trends/: page.tsx
components/: chat-interface.tsx  compare-charts-columns.tsx  compare-datasets-dialog.tsx  dataset-report-dialog.tsx  file-upload.tsx  kpi-dashboard.tsx  main-shell.tsx  message-speech-button.tsx  visualization-viewer.tsx  voice-input.tsx
contexts/: dataset-context.tsx
docs/images/: README.md
hooks/: use-text-to-speech.ts  use-voice-recorder.ts
lib/: comparison-report-html.ts  dataset-suggestions.ts  formal-report-html.ts
